// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculation Result Selector getCO2EmissionReport should return the co2 emission report data 1`] = `
Object {
  "co2_upstream": 5,
}
`;

exports[`Calculation Result Selector getCalculationWithResult should return the calculations with result 1`] = `
Array [
  Object {
    "disabled": false,
    "icon": "compress",
    "label": "calculationTypes.frictionalPowerloss",
    "name": "frictionalPowerloss",
    "resultAvailable": true,
    "selected": true,
    "visible": true,
  },
  Object {
    "disabled": true,
    "label": "calculationTypes.co2",
    "name": "emission",
    "resultAvailable": true,
    "selected": true,
    "svgIcon": "co2",
    "visible": true,
  },
]
`;

exports[`Calculation Result Selector getReportMessages should return report messages 1`] = `
Array [
  Object {
    "title": "Errors",
  },
  Object {
    "title": "Warnings",
  },
]
`;

exports[`Calculation Result Selector getResultInput should return result input 1`] = `
Array [
  Object {
    "hasNestedStructure": true,
    "title": "some title",
  },
]
`;

exports[`Calculation Result Selector getSelectedCalculations should return the selected calculations 1`] = `
Array [
  Object {
    "disabled": false,
    "icon": "compress",
    "label": "calculationTypes.frictionalPowerloss",
    "name": "frictionalPowerloss",
    "resultAvailable": true,
    "selected": true,
    "visible": true,
  },
  Object {
    "disabled": true,
    "label": "calculationTypes.co2",
    "name": "emission",
    "resultAvailable": true,
    "selected": true,
    "svgIcon": "co2",
    "visible": true,
  },
]
`;
